map1/gap_follower/log/build_2025-04-22_11-43-32/gap_follower_pkg/stderr.log
  File "/home/salem/Desktop/f1tenth-autonomous-racing/map1/gap_follower/install/gap_follower_pkg/lib/python3.8/site-packages/gap_follower_pkg/gap_follower.py", line 59
    self.get_logger().info("FORCteer, speed):
                                            ^
SyntaxError: EOL while scanning string literal

